# glprototypes

./: .gitignore  CMakeLists.txt
drms/: CMakeLists.txt  main.c
glad/: glad.c  glad.h
